<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
	<string name="key_native_language">US - English</string>
	<string name="notification_monthbefore">Your next week of testing begins in one month on {DATE}. You may adjust this schedule up to 7 days.</string>
	<string name="notification_weekbefore">Reminder: Your next testing cycle starts in one week. Tap to confirm or reschedule.</string>
	<string name="notification_daybefore">Reminder: Your next testing cycle begins tomorrow. Tap to confirm or reschedule.</string>
	<string name="notification1_firstday">It\'s time for the first test of the week! Start your streak by completing this test by {TIME}.</string>
	<string name="notification1_default">It\'s time for the first test of the day! This test will be available until {TIME}.</string>
	<string name="notification1_halfway">You\'re halfway through the week. Keep it up! Today\'s first test will be available until {TIME}.</string>
	<string name="notification1_lastday">You\'re on the last day of testing this week! Your first test of the day will be available until {TIME}.</string>
	<string name="notifications2_default">It\'s time for today\'s second test! This test will be available until {TIME}.</string>
	<string name="notification3_default">Your third test of the day is now available. Please complete this test by {TIME}.</string>
	<string name="notification3_variation">Here\'s another chance to earn money and help science Please complete test #3 by {TIME}.</string>
	<string name="notification4_default">The last test of the day is here! Finish strong by completing this test by {TIME}.</string>
	<string name="notification4_lastday">It\'s time to take your last test of the week! Please finish it by {TIME}. Your coordinator will contact you about your earnings shortly.</string>
	<string name="notification_missedtests">You\'ve missed your tests. If you\'re unable \nto finish this week, please contact your study coordinator.</string>
	<string name="notification_testproctor_header">Test Scheduler Service Running</string>
	<string name="notification_testproctor_body">This ensures that you\'re notified of tests at the correct time.</string>
	<string name="dateshift_picker">What week are you able to test?</string>
	<string name="dateshift_confirmation">Great! Your next testing cycle will be &lt;b>{DATE1}&lt;/b> through &lt;b>{DATE2}&lt;/b>.</string>
	<string name="language_prefer">Please select your &lt;b>preferred language&lt;/b>.</string>
	<string name="gen_welcome_key">Welcome to the &lt;b>ARC App&lt;/b></string>
	<string name="bysigning_key">By signing in you agree to our</string>
	<string name="privacy_linked">Privacy Policy</string>
	<string name="about_linked">About This App</string>
	<string name="login_enter_ARCID">Please enter your &lt;b>ARC ID&lt;/b> below:</string>
	<string name="login_confirm_ARCID">To confirm, please &lt;b>re-enter your ARC ID:&lt;/b></string>
	<string name="login_problems_linked">&lt;b>Problems logging in?&lt;/b></string>
	<string name="login_enter_2FA">Please enter your &lt;b>login verification code&lt;/b>.</string>
	<string name="login_2FA_body">We\'ve sent a security code to your phone with number ending in &lt;b>{##}&lt;/b>.</string>
	<string name="login_problems_2FA">Didn\'t receive code?</string>
	<string name="login_resend_header">Resend code?</string>
	<string name="login_resend_subheader">Keep in mind that it might take a few minutes to receive your security code.</string>
	<string name="login_2FA_text">Your ARC security code is {######}.</string>
	<string name="login_2FA_morehelp_linked">I need more help</string>
	<string name="onboarding_header">Testing Commitment</string>
	<string name="onboarding_body">Every six months, you will be asked to complete &lt;b>one week&lt;/b> of cognitive tests. During the week, you will be reminded &lt;b>4 times a day&lt;/b> to complete tests within the app. You may be in the study for as long as &lt;b>5 years&lt;/b> (10 weeks of testing).</string>
	<string name="radio_commit">I commit to participate for the length of the study</string>
	<string name="radio_nocommit">I\'m NOT able to commit to this study</string>
	<string name="onboarding_nocommit_header">&lt;b>Thank you for your time.&lt;/b></string>
	<string name="onboarding_nocommit_body">Thank you for letting us know you are not able to commit to the study at this time. If you need any questions answered before continuing with the study, please contact the study team by clicking HELP in the upper right hand corner of the screen.</string>
	<string name="onboarding_nocommit_landing_header">Study Participation</string>
	<string name="onboarding_nocommit_landing_body">To participate in the ARC study, you must commit to the required testing schedule. You previously indicated that you were unable to do so.&lt;br />&lt;br />If you\'d like to participate, tap Next to review the requirements. If you\'d like to leave the study, please contact your study coordinator.</string>
	<string name="onboarding_commit_header">Thank you!</string>
	<string name="onboarding_commit_body">Your participation in this study and every task you complete contributes to advancing Alzheimer\'s Disease research.</string>
	<string name="onboarding_notifications_header1">A Note on Notifications</string>
	<string name="onboarding_notifications_body1">We use notifications to let you know it\'s time to take a test. &lt;b>Notifications are essential for the study to function properly.&lt;/b> Please allow notifications for this app throughout the duration of the study.</string>
	<string name="onboarding_notifications_popup">&lt;b>Please tap "allow"&lt;/b> so we can tell you when tests are available.</string>
	<string name="onboarding_notifications_header2">Please turn on notifications.</string>
	<string name="onboarding_notifications_body2_ios">You must turn on notifications for the study to function properly. Please visit the Settings App, tap Notifications, then tap EXR and turn on the Allow Notifications switch.</string>
	<string name="onboarding_notifications_body2_android">You must turn on notifications for the study to function properly. Please go to Settings and make sure notifications for {APP_NAME} are turned on.</string>
	<string name="button_home_notifications">Turn On Notificaitions</string>
	<string name="button_proceed_without_notifications">Proceed Without Notifications</string>
	<string name="popup_opensettings">We\'ll now open your Settings. Once there, tap Notifications, and turn on the Allow Notifications Switch.</string>
	<string name="button_notnow">Not now</string>
	<string name="availability_header">Availability</string>
	<string name="availability_body">Now, we\'ll ask you a few questions to help us determine when to send you those notifications. \n&lt;br />&lt;br />\n&lt;i>You will only receive notifications during your waking hours. Please set a minimum 8-hour window of availability.&lt;/i></string>
	<string name="availability_start">What time should we &lt;b>start&lt;/b> your notifications each day?</string>
	<string name="availability_stop">What time should we &lt;b>stop&lt;/b> your notifications each day?</string>
	<string name="availability_minimum_error">Please set a minimum of {HOURS} hours of availability.</string>
	<string name="availability_maximum_error">Please set a maximum of {HOURS} hours of availability.</string>
	<string name="availability_confirm">Great! We\'ll only send you reminders between &lt;b>{TIME1}&lt;/b> and &lt;b>{TIME2}&lt;/b>.</string>
	<string name="availability_change_linked">Change Times</string>
	<string name="availability_change_confirm">Great! Starting tomorrow, we\'ll only send you reminders between &lt;b>{TIME1}&lt;/b> and &lt;b>{TIME2}&lt;/b>.</string>
	<string name="availability_change_week">What week are you able to test?</string>
	<string name="availability_change_week_confirm">Great! Your next testing cycle will be &lt;b>{DATE1}&lt;/b> through &lt;b>{DATE2}&lt;/b>.</string>
	<string name="idverify_header">ID Verification</string>
	<string name="idverify_body">Please sign your initials on the line below to verify your identity.</string>
	<string name="idverify_undo">Undo</string>
	<string name="home_header1">You have a new test available.</string>
	<string name="home_header2">There are no tests to take right now.</string>
	<string name="home_body2">You will receive a notification &lt;b>later today&lt;/b> when it\'s time to take your next test.</string>
	<string name="home_header3">You\'re done with today\'s tests.</string>
	<string name="home_body3">We\'ll notify you tomorrow between &lt;b>{TIME1} and {TIME2}&lt;/b> when it\'s time to take a test.</string>
	<string name="home_header4">There are no tests available right now.</string>
	<string name="home_body4">Your next testing cycle will be &lt;b>{DATE1} through {DATE2}&lt;/b>. We\'ll notify you when it\'s time to take a test.</string>
	<string name="home_header5">Your testing cycle starts tomorrow.</string>
	<string name="home_body5">It will run from &lt;b>{DATE1} to {DATE2}&lt;/b>. We\'ll notify you when it\'s time to take a test.</string>
	<string name="home_header6">You\'ve finished the study!</string>
	<string name="home_body6">There are no more tests to take.</string>
	<string name="home_header7">Your first testing cycle begins tomorrow.</string>
	<string name="home_body7">There will be 4 test sessions per day for 7 days.\n&lt;br />&lt;br />We\'ll notify you &lt;b>between {TIME1} and {TIME2}&lt;/b> when it\'s time to take a test.</string>
	<string name="resources_header">Resources</string>
	<string name="resources_availability">Change My Availability</string>
	<string name="resources_contact">Contact Study Coordinator</string>
	<string name="resources_about_link">About This App</string>
	<string name="resources_faq_link">Frequently Asked Questions</string>
	<string name="resources_privacy_link">Privacy Policy</string>
	<string name="resources_nav_home">Home</string>
	<string name="resources_nav_progress">Progress</string>
	<string name="resources_nav_earnings">Earnings</string>
	<string name="resources_nav_resources">Resources</string>
	<string name="availability_changetime">I would like to change the &lt;b>time of day&lt;/b> I am available for testing.</string>
	<string name="availability_changedenied_test">Check back after your test</string>
	<string name="availability_changedates">I would like to change the &lt;b>dates&lt;/b> of my next &lt;b>testing cycle&lt;/b>.</string>
	<string name="contact_call1">I would like to &lt;b>call&lt;/b> my study coordinator.</string>
	<string name="contact_call2">314-273-7112</string>
	<string name="contact_email1">I would like to &lt;b>email&lt;/b> my study coordinator.</string>
	<string name="contact_email2">neuro-dianarc@email.wustl.edu</string>
	<string name="about_header">About this App</string>
	<string name="earnings_body1">You will receive an &lt;b>Amazon Gift Card&lt;/b> for the earned amount after each week of testing.</string>
	<string name="earnings_weektotal">This Week</string>
	<string name="earnings_studytotal">Study Total</string>
	<string name="earnings_bonus_header">Bonus Goals</string>
	<string name="earnings_bonus_body">Complete the following testing goals to &lt;b>earn bonuses&lt;/b>.</string>
	<string name="earnings_details_header">Earnings Details</string>
	<string name="testing_intro_header">You will now complete 3 quick tests</string>
	<string name="testing_intro_body">&lt;i>You cannot pause a test once it has been started. You cannot go back to the previous screen.&lt;/i></string>
	<string name="button_back">BACK</string>
	<string name="button_next">NEXT</string>
	<string name="button_viewfaq">VIEW FAQ</string>
	<string name="button_viewdetails">VIEW DETAILS</string>
</resources>