<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/subheader"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="130dp"
        android:gravity="center"
        android:text="@string/testing_intro_header"
        android:textSize="26dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/nextButton"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:text="@string/testing_intro_body"
        android:textSize="17dp"
        android:textStyle="italic"
        android:textColor="@color/grey"/>

    <com.healthymedium.arc.ui.Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/button_next"
        app:buttonTheme="light">

    </com.healthymedium.arc.ui.Button>
</RelativeLayout>